--- a/wp-content/themes/bruden/assets/scss/main.scss
+++ b/wp-content/themes/bruden/assets/scss/main.scss
@@ -11,12 +11,16 @@ $grey: #7F7F7F;
     .container{
         position: relative;
     }
-    &__img{
+    img{
         height: 65vh;
+        width: auto;
         @media(max-width:992px){
             height: 35vh;
             width: auto;
             margin-bottom: 50px;
+        }
+        @media(max-width:578px){
+            margin-bottom: 25px;
         }
     }
     .btn{
@@ -63,7 +67,7 @@ $grey: #7F7F7F;
         margin-bottom: 20px;
         line-height: 130%;
         @media(max-width:578px){
-            font-size: 24px;
+            font-size: 22px;
         }
     }
     &__text{
@@ -87,6 +91,9 @@ $grey: #7F7F7F;
     height: 65vh;
     @media(max-width:992px){
         height: 93vh;
+    }
+    @media(max-width:578px){
+        height: 100vh;
     }
   }
 
