--- a/wp-content/themes/bruden/assets/scss/main.scss
+++ b/wp-content/themes/bruden/assets/scss/main.scss
@@ -139,7 +139,9 @@ $grey: #7F7F7F;
         left: 0;
     }
     .container{
+        width: 100%;
         height: 70vh;
+        overflow: hidden;
         position: relative;
     }
     &__title{
@@ -162,6 +164,11 @@ $grey: #7F7F7F;
             background: #000;
             color: #fff;
         }
+    }
+    img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
     }
 }
 
