--- a/wp-content/themes/bruden/assets/css/main.css
+++ b/wp-content/themes/bruden/assets/css/main.css
@@ -249,6 +249,28 @@
   width: 50%;
 }
 
+.banner__part::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  background: rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+          box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.banner__part:hover::before {
+  opacity: 1;
+}
+
 @media (max-width: 768px) {
   .banner__part::after {
     content: '';
@@ -337,6 +359,28 @@
   position: relative;
 }
 
+.fits__inner::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 15px;
+  right: 15px;
+  width: calc(100% - 330px);
+  bottom: 15px;
+  background: rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+          box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.fits__inner:hover::before {
+  opacity: 1;
+}
+
 @media (max-width: 992px) {
   .fits__inner {
     position: relative;
@@ -356,6 +400,7 @@
   .fits__content {
     position: absolute;
     width: 100%;
+    height: 100%;
     top: 0;
     left: 0;
     background: rgba(255, 255, 255, 0.45);
