--- a/wp-content/themes/bruden/assets/css/main.css
+++ b/wp-content/themes/bruden/assets/css/main.css
@@ -194,6 +194,28 @@
   position: relative;
 }
 
+.additional .container::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  right: 15px;
+  bottom: 15px;
+  background: rgba(255, 255, 255, 0.13);
+  -webkit-box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+          box-shadow: 0 15px 25px rgba(129, 124, 124, 0.13);
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  opacity: 0;
+  -webkit-transition: opacity .3s;
+  transition: opacity .3s;
+}
+
+.additional .container:hover::before {
+  opacity: 1;
+}
+
 .additional__title {
   color: #fff;
   text-align: right;
@@ -218,6 +240,7 @@
   background: #000;
   color: #fff;
 }
+
 .additional img {
   width: 100%;
   height: 100%;
