some issues fixed

--- a/wp-content/themes/bruden/assets/scss/about.scss
+++ b/wp-content/themes/bruden/assets/scss/about.scss
@@ -24,10 +24,12 @@
         }
     }
     &__img{
-        display: block;
-        height: 50vh;
-        width: 100%;
-        object-fit: cover;
+
+        img {
+            display: block;
+            height: auto;
+            width: 100%;
+        }
     }
     &__uptitle{
         margin-bottom: 15px;
