--- a/wp-content/themes/bruden/assets/css/about.css
+++ b/wp-content/themes/bruden/assets/css/about.css
@@ -2,7 +2,6 @@
   margin-bottom: 50px;
   text-align: center;
 }
-
 @media (max-width: 578px) {
   .page__title {
     margin-bottom: 20px;
@@ -12,43 +11,32 @@
 .about {
   padding: 90px 0;
 }
-
 @media (max-width: 992px) {
   .about {
     padding-bottom: 45px;
   }
 }
-
 .about__cols {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[2];
-      grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 40px;
 }
-
 @media (max-width: 992px) {
   .about__cols {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
     gap: 25px;
   }
 }
-
 @media (max-width: 578px) {
   .about__cols {
     text-align: center;
   }
 }
-
-.about__img {
+.about__img img {
   display: block;
-  height: 50vh;
+  height: auto;
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
 }
-
 .about__uptitle {
   margin-bottom: 15px;
   font-size: 16px;
@@ -58,31 +46,26 @@
   color: rgba(0, 0, 0, 0.5);
   font-weight: 400;
 }
-
 .about__title {
   text-transform: capitalize;
   margin-bottom: 30px;
   line-height: 160%;
 }
-
 @media (max-width: 578px) {
   .about__title {
     margin-bottom: 20px;
     font-size: 22px;
   }
 }
-
 .about__text {
   font-size: 18px;
   line-height: 160%;
   letter-spacing: 0.05em;
   color: #000000;
 }
-
 .about__text_2 {
   margin-top: 35px;
 }
-
 @media (max-width: 578px) {
   .about__text_2 {
     margin-top: 20px;
@@ -90,45 +73,34 @@
 }
 
 .advantages__list {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[3];
-      grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 40px;
 }
-
 @media (max-width: 992px) {
   .advantages__list {
-    -ms-grid-columns: (1fr)[2];
-        grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap: 20px;
     text-align: center;
   }
 }
-
 @media (max-width: 578px) {
   .advantages__list {
-    -ms-grid-columns: 1fr;
-        grid-template-columns: 1fr;
+    grid-template-columns: 1fr;
   }
 }
-
 @media (max-width: 992px) {
   .advantages__item:last-child {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 3;
   }
 }
-
 @media (max-width: 992px) and (max-width: 578px) {
   .advantages__item {
-    -ms-grid-column: 1;
-        grid-column-start: 1;
+    grid-column-start: 1;
     grid-column-end: 2;
   }
 }
-
 .advantages__title {
   line-height: 160%;
   letter-spacing: 0.1em;
@@ -136,7 +108,6 @@
   color: #000000;
   margin-bottom: 30px;
 }
-
 .advantages__text {
   font-size: 18px;
   line-height: 160%;
@@ -147,7 +118,6 @@
 .special {
   margin-top: 90px;
 }
-
 @media (max-width: 992px) {
   .special {
     margin-top: 45px;
