--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -796,6 +796,8 @@ section.category{
     img{
         width: 100%;
         height: auto;
+        aspect-ratio: 1;
+        object-fit: cover;
       }
 }
 
