--- a/wp-content/themes/bruden/assets/css/contact.css
+++ b/wp-content/themes/bruden/assets/css/contact.css
@@ -156,7 +156,7 @@ form .wpcf7-response-output::after {
   position: absolute;
   width: 100%;
   height: 1px;
-  background: #DE1616;
+  background: #000;
   bottom: -10px;
 }
 
