--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -243,7 +243,7 @@
             font-size: 22px;
             line-height: 1;
             letter-spacing: 0.05em;
-            color: #DE1616;
+            color: #000;
         }
 
         .cart {
@@ -432,7 +432,7 @@
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             font-size: 22px;
             line-height: 1;
-            color: #DE1616;
+            color: #000;
         }
 
         .cart {
@@ -713,7 +713,7 @@
 
     .wishlist_table tr td.product-remove a {
         font-size: 32px;
-        color: #DE1616;
+        color: #000;
     }
 
     .wishlist_table tr td.product-thumbnail a {
@@ -856,7 +856,7 @@
             text-align: center;
             
             a {
-                color: #DE1616;
+                color: #000;
             }
         }
 
