--- a/wp-content/themes/bruden/assets/scss/style.scss
+++ b/wp-content/themes/bruden/assets/scss/style.scss
@@ -2,7 +2,7 @@
 
 $dark: #292A33;
 $yellow: #FDAE04;
-$red: #DE1616;
+$red: #000;
 $grey: #7F7F7F;
 
 // global
@@ -190,7 +190,7 @@ button, input[type="submit"]{
                     gap: 10px;
                     align-items: center;
                     span{
-                        background: #DE1616;
+                        background: #000;
                         color: #fff;
                         font-family: 'Lato', sans-serif;
                         font-weight: 700;
@@ -240,21 +240,25 @@ button, input[type="submit"]{
     
             display: flex;
             align-items: center;
-            column-gap: 10px;
+            column-gap: 3px;
     
             i {
-                font-size: 26px;
+                font-size: 24px;
                 color: #000000;
+                font-weight: 400;
             }
     
             &::after {
                 position: static;
-                font-weight: 300;
+                font-weight: 500;
                 font-size: 16px;
                 line-height: 20px;
                 border-radius: 50%;
                 height: 20px;
-                width: 20px;
+                width: 10px;
+                padding-right: 10px;
+                background: #fff !important;
+                color: #000 !important;
             }
     
             .woofc-menu-item-inner-subtotal {
@@ -864,26 +868,7 @@ section.category{
     }
 }
 
-// preloader
 
-.preloader{
-    position: fixed;
-    width: 100%;
-    height: 100vh;
-    z-index: 25;
-    background: #fff;
-    top: 0;
-    left: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    opacity: 1;
-    transition: opacity .3s, top .3s;
-    &_hidden{
-        opacity: 0;
-        top: -100vh;
-    }
-}
 
 .woocommerce-product-gallery__wrapper a {
     display: flex !important;
