--- a/wp-content/themes/bruden/assets/scss/shop.scss
+++ b/wp-content/themes/bruden/assets/scss/shop.scss
@@ -610,7 +610,7 @@
             padding: 5px;
             font-size: 0;
             overflow-x: hidden;
-            background: #fff;
+            // background: #fff;
             white-space: nowrap;
             color: #292A33;
             transition: all .3s;
@@ -657,7 +657,7 @@
                 height: 30px;
                 width: 30px;
                 padding: 6px;
-                background: #fff;
+                // background: #fff;
             }
 
             .yith-wcwl-icon {
@@ -670,7 +670,7 @@
             display: block;
             height: 30px;
             width: 30px;
-            background: #fff;
+            // background: #fff;
             position: absolute;
             right: 15px;
             top: 60px;
